<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
            <ImageView
                android:id="@+id/rImageView"
                android:layout_width="80dp"
                android:layout_height="130dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:padding="2dp"/>
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/scanResultHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_scan_result2"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scanData"
                android:text="@string/text_can_eat_or_not"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#5CB85C"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textDate"
                    android:text="@string/date"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textDate2"
                    android:text="@string/dataNull"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="5dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTime"
                    android:text="@string/time"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTime2"
                    android:text="@string/dataNull"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>




        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>