<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008E8E"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:paddingBottom="80dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:text="@string/text_welcome"
                    android:textColor="@color/white"
                    android:textSize="35dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="45dp"
                    android:text="@string/text_login_con"
                    android:textColor="#EAEAEA"
                    android:textSize="16dp"
                    android:textStyle="bold" />


            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_email"
                        android:textColor="#008E8E"
                        android:textSize="18dp"
                        android:textStyle="bold">

                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/TextInput_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/TextInputEdit_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/text_password"
                        android:textColor="#008E8E"
                        android:textSize="18dp"
                        android:textStyle="bold">

                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/TextInput_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/TextInputEdit_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView_login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="35dp"
                        android:layout_marginEnd="80dp"
                        android:padding="8dp"
                        android:text="@string/btn_login"
                        android:background="@drawable/rounded_corners"
                        android:backgroundTint="#4BB543"
                        android:gravity="center"
                        android:textColor="#ffffff"
                        android:textSize="18dp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/textView_new_user_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:text="@string/btn_new_user"
                        android:backgroundTint="#4BB543"
                        android:gravity="center"
                        android:textColor="#4BB543"
                        android:textSize="18dp"
                        android:textStyle="bold">
                    </TextView>

                    <TextView
                        android:id="@+id/textView_or"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/text_or"
                        android:backgroundTint="#4BB543"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18dp"
                        android:textStyle="bold">
                    </TextView>

                    <TextView
                        android:id="@+id/textView_forgot_password_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/text_forgot_password"
                        android:backgroundTint="#4BB543"
                        android:gravity="center"
                        android:textColor="#4BB543"
                        android:textSize="18dp"
                        android:textStyle="bold">
                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>